deploy/openshift/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata: {name: frontend}
spec: {selector: {app.kubernetes.io/name: frontend}, ports: [{name: http, port: 8080, targetPort: http}]}
