deploy/openshift/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata: {name: postgres}
spec: {clusterIP: None, selector: {app.kubernetes.io/name: postgres}, ports: [{name: postgres, port: 5432}]}
