deploy/openshift/base/scoring-service.yaml
apiVersion: v1
kind: Service
metadata: {name: scoring}
spec: {selector: {app.kubernetes.io/name: scoring}, ports: [{name: http, port: 8080, targetPort: http}]}
